# finml-sota-analyst

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/commands/: backtest.md  features.md  forecast.md  leakage.md
.claude/skills/: FINML.md
prompts/academic-papers/: 01-research-question-and-contribution.md  02-literature-synthesis-and-gap.md  03-conceptual-framework-and-hypotheses.md  04-identification-strategy.md  05-data-and-measurement.md  06-empirical-specification.md  07-results-narrative-and-exhibits.md  08-robustness-and-threats-to-validity.md  09-introduction-abstract-and-title.md  10-referee-response-and-revision.md  README.md
src/: finml.py  finml.ts
tests/: test_finml.py
