[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finml-sota-analyst"
version = "1.0.0"
description = "FinML SOTA Analyst - Machine Learning for Financial & Economic Data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = [
    "machine-learning",
    "finance",
    "time-series",
    "forecasting",
    "trading",
    "quantitative",
    "ai-agent",
    "claude"
]
dependencies = [
    "claude-agent-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
ml = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "shap>=0.42.0",
    "optuna>=3.3.0",
    "statsmodels>=0.14.0",
]
deep = [
    "torch>=2.0.0",
    "pytorch-forecasting>=1.0.0",
    "transformers>=4.30.0",
]
finance = [
    "yfinance>=0.2.0",
    "pandas-datareader>=0.10.0",
    "quantstats>=0.0.62",
    "empyrical>=0.5.5",
]

[project.scripts]
finml = "finml:main"

[project.urls]
Homepage = "https://github.com/your-username/finml-sota-analyst"
Documentation = "https://github.com/your-username/finml-sota-analyst#readme"
Repository = "https://github.com/your-username/finml-sota-analyst.git"
Issues = "https://github.com/your-username/finml-sota-analyst/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "D", "UP", "ANN", "S", "B", "A", "C4", "ISC", "ICN", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "ERA", "PL", "TRY", "RUF"]
ignore = ["D100", "D104", "ANN101", "ANN102"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
